feat: Implement security feature in api